--- a/primid/src/main/webapp/src/modules/evento/evento.tpl.html
+++ b/primid/src/main/webapp/src/modules/evento/evento.tpl.html
@@ -146,7 +146,7 @@
                     <input id="description" name="description" class="form-control" type="text" ng-model="currentRecord.description" required />
                 </div>
             </div>
-<!--            <div class="form-group col-md-12" ng-class="{'has-success': !form.startDate.$error.required && form.startDate.$dirty, 'has-error': form.startDate.$error.required && (form.startDate.$dirty || form.$submitted)}" >
+            <div class="form-group col-md-12" ng-class="{'has-success': !form.startDate.$error.required && form.startDate.$dirty, 'has-error': form.startDate.$error.required && (form.startDate.$dirty || form.$submitted)}" >
                 <label for="startDate" class="col-md-2 control-label">Fecha de inicio:</label>
                 <div class="col-md-10">
                     <p class="input-group">
@@ -156,7 +156,7 @@
                         </span>
                     </p>
                 </div>
-            </div>-->
+            </div>
             <div class="form-group col-md-12" ng-class="{'has-success': form.place.$valid && form.place.$dirty, 'has-error': form.place.$invalid && (form.place.$dirty || form.$submitted)}" >
                 <label for="place" class="col-md-2 control-label">Place</label>
                 <div class="col-md-10">
@@ -178,7 +178,7 @@
             </div>
             <!--            Deberia ser un select para escoger la ciudad-->
             <div class="form-group col-md-12" ng-class="{'has-success': form.ciudad.$valid && form.ciudad.$dirty, 'has-error': form.ciudad.$invalid && (form.ciudad.$dirty || form.$submitted)}" >
-                <label for="ciudad" class="col-md-2 control-label">Ciudad2:</label>
+                <label for="ciudad" class="col-md-2 control-label">Ciudad:</label>
                 <div class="col-md-10">
                     <select id="ciudad" name="ciudad" ng-options="rc.ciudad for rc in ciudades track by rc.id" class="form-control" type="text" ng-model="currentRecord.ciudad" ></select>
                 </div>
