--- a/primid/src/main/webapp/index.html
+++ b/primid/src/main/webapp/index.html
@@ -93,6 +93,11 @@
         <script src="src/modules/Itinerario/itinerario.mod.js" type="text/javascript"></script>
         <script src="src/modules/Itinerario/itinerario.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/Itinerario/itinerario.svc.js" type="text/javascript"></script>
+
+        <!-- Modulo multimedia-->
+        <script src="src/modules/multimedia/multimedia.mod.js" type="text/javascript"></script>
+        <script src="src/modules/multimedia/multimedia.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/multimedia/multimedia.svc.js" type="text/javascript"></script>
         <!--==== Js files [End] ====-->
     <!--==== Js files [End] ====-->
     </head>
