--- a/primid/src/main/webapp/src/modules/multimedia/multimedia.tpl.html
+++ b/primid/src/main/webapp/src/modules/multimedia/multimedia.tpl.html
@@ -98,5 +98,5 @@
                                     </ul>
 </div> <!--=== Portfolio loader ===-->
 
-
+</div>
 <!--==== MailChimp Widget plugin ====-->
